--- a/src/client/Recorder/components/RecordingPanel/index.css
+++ b/src/client/Recorder/components/RecordingPanel/index.css
@@ -1,5 +1,15 @@
 .recorder-container {
-  display: inline-block;
+  display: flex;
+  align-items: flex-start;
   border: 1px solid red;
   padding: 5px;
+}
+
+label {
+  margin: 0 20px;
+}
+label textarea,
+input {
+  vertical-align: top;
+  margin-left: 10px;
 }
