--- a/src/client/Recorder/components/RecordingPanel/index.css
+++ b/src/client/Recorder/components/RecordingPanel/index.css
@@ -5,11 +5,11 @@
   padding: 5px;
 }
 
-label {
+.recorder-label {
   margin: 0 20px;
 }
-label textarea,
-input {
+.recorder-textarea,
+.recorder-input {
   vertical-align: top;
   margin-left: 10px;
 }
