--- a/examples/frontend/simple/src/components/App/components/MovieEditor/index.css
+++ b/examples/frontend/simple/src/components/App/components/MovieEditor/index.css
@@ -2,6 +2,7 @@
   flex: 1;
   min-width: 300px;
   border: 1px solid gray;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 10px;
+  margin-left: 10px;
 }
